[metadata]
name = imagemix
version = 0.0.1
description = ImageMix generates image creatives by adding multiple images and texts to a template image.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: Apache 2.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
